--- a/package.json
+++ b/package.json
@@ -17,15 +17,28 @@
   ],
   "testling": {
     "browsers": [
-        "ie6", "ie7", "ie8", "ie9", "ie10",
-        "firefox/18", "firefox/nightly", "chrome/25", "chrome/canary", "opera/12", "safari/5.1"
+      "ie6",
+      "ie7",
+      "ie8",
+      "ie9",
+      "ie10",
+      "firefox/18",
+      "firefox/nightly",
+      "chrome/25",
+      "chrome/canary",
+      "opera/12",
+      "safari/5.1"
     ],
-    "harness" : "mocha",
+    "harness": "mocha",
     "files": "test/*.js"
   },
-  "devDependencies":{
-      "mocha":"*",
-      "expect.js":"*"
+  "dependencies": {
+    "totemizer": "*",
+    "boo": "~1.2.4"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "expect.js": "*"
   },
   "author": "ashnur",
   "license": "DAFUQ",
