--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rationals",
   "description": "rational numbers with operations",
-  "version": "0.0.11",
-  "main": "lib/rat.js",
+  "version": "0.0.12",
+  "main": "index.js",
   "scripts": {
     "test": "mocha",
     "prepublish": "npm test"
@@ -42,7 +42,7 @@
     "harness": "mocha"
   },
   "keywords": [
-    "rational numberss",
+    "rational numbers",
     "rationals",
     "rational arithmetic",
     "dividing with zero",
