removed the not used library from package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rationals",
   "description": "rational numbers with operations",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "totemizer": "0.0.4",
-    "boo": "~1.2.4",
-    "big-number": "~0.2.5"
+    "boo": "~1.2.4"
   },
   "devDependencies": {
     "mocha": "*",
