--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rationals",
   "description": "rational numbers with operations",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "totemizer": "0.0.4",
-    "boo": "~1.2.4"
+    "boo": "~1.2.4",
+    "biginteger": "~1.0.1"
   },
   "devDependencies": {
     "mocha": "*",
