--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "rationals",
   "description": "rational numbers with operations",
-  "version": "0.1.9",
+  "version": "0.2.1",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "prepublish": "npm test"
+    "test": "tape test/*.js"
   },
-  "dependencies": {
-    "totemizer": "~0.0.4",
-    "biginteger": "~1.0.1",
-    "viral": "~0.0.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "mocha": "*",
-    "expect.js": "*"
+    "eslint-plugin-prettier": "^3.0.0",
+    "fast-check": "^1.7.1",
+    "prettier": "1.14.3",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1",
+    "tape": "^4.9.1"
   },
   "repository": {
     "type": "git",
@@ -22,25 +21,6 @@
   },
   "bugs": {
     "url": "https://github.com/ashnur/rationals/issues"
-  },
-  "testling": {
-    "files": "test/*.js",
-    "browsers": [
-      "iexplore/6.0",
-      "iexplore/7.0",
-      "iexplore/8.0",
-      "iexplore/9.0",
-      "iexplore/10.0",
-      "chrome/4.0",
-      "chrome/23.0",
-      "firefox/3.0",
-      "firefox/17.0",
-      "opera/10.0",
-      "opera/12.0",
-      "safari/5.0.5",
-      "safari/5.1"
-    ],
-    "harness": "mocha"
   },
   "keywords": [
     "rational numbers",
@@ -52,6 +32,6 @@
     "numbers"
   ],
   "author": "ashnur",
-  "license": "DAFUQ",
+  "license": "MIT",
   "readmeFilename": "README.md"
 }
