--- a/package.json
+++ b/package.json
@@ -8,15 +8,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-babel": "^5.2.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "fast-check": "^1.7.1",
-    "prettier": "1.14.3",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "tape": "^4.9.1",
-    "typescript": "^3.2.0-dev.20181103"
+    "fast-check": "^1.14.0",
+    "tape": "^4.10.1"
   },
   "repository": {
     "type": "git",
