--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rationals",
   "description": "rational numbers with operations",
   "version": "0.2.1",
-  "main": "index.js",
+  "main": "index.mjs",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon -x \"node --experimental-modules ./test/test.mjs\"",
     "test": "tape ./test/test.js"
   },
   "dependencies": {},
